# Tachibana-Sherry-Generator

./: .gitignore  README.md  Tachibana_Sherry_Generator.py  build.bat  main.py  memeapp.py  pyproject.toml  requirements.txt  run.bat  setup.py  test_resize_modes.py
V1.2/: README.md  admin_utils.py  build.bat  clipboard_utils.py  generator.py  keyboard_hook.c  keyboard_hook.py  main.py  memeapp.py  run.bat  setup.py  ui_builder.py
comments/: generator.py
core/: config.py  generator.py
services/: clipboard_mgr.py  keyboard_mgr.py  process_mgr.py
ui/: app_window.py  classic_tab.py  listener_tab.py
utils/: __init__.py  drag_fileManagement.py  generator.py  memeapp.py
